--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "env": {
         "browser": true,
         "es2020": true,
-        "jest": true
+        "jest": true,
+        "jquery": true
     },
     "parserOptions": {
         "ecmaVersion": 2020,
