--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "scripts": {
     "test": "jest"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "jquery": "3.5.1"
+  }
 }
