--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,10 +22,11 @@
         "import/exports-last": "error",
         "import/extensions": "off",
         "import/group-exports": "error",
-        "import/no-commonjs": "off",
+        "import/no-commonjs": "error",
         "import/no-namespace": "error",
-        "import/no-nodejs-modules": "off",
+        "import/no-nodejs-modules": "error",
         "import/no-unused-modules": "off",
+        "import/prefer-default-export": "off",
         "import/unambiguous": "off",
         "init-declarations": "error",
         "no-constructor-return": "error",
