--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
   "scripts": {
     "test": "jest"
   },
-  "type": "module",
-  "dependencies": {
-    "jquery": "3.5.1"
-  }
+  "type": "module"
 }
